# dev-box

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  aibox.toml  dev-box.toml  index.html  mkdocs.yml  sitemap.xml  start-box.sh  zensical.toml
.devcontainer/: Dockerfile  Dockerfile.e2e  Dockerfile.local  devcontainer.json  docker-compose.override.yml  docker-compose.yml
.devcontainer/config/: asoundrc  cheatsheet.txt  gitconfig
.devcontainer/ssh-e2e/: authorized_keys  id_ed25519
addons/ai/: ai-aider.yaml  ai-claude.yaml  ai-codex.yaml  ai-continue.yaml  ai-copilot.yaml  ai-gemini.yaml  ai-hermes.yaml  ai-mistral.yaml  ai-openai.yaml  ai-opencode.yaml
addons/docs/: docs-docusaurus.yaml  docs-hugo.yaml  docs-mdbook.yaml  docs-mkdocs.yaml  (+2 more)
changelog/: index.html
cli/: Cargo.toml
cli/.aibox-home/.config/zellij/: config.kdl
cli/.aibox-home/.config/zellij/layouts/: cowork.kdl  dev.kdl  focus.kdl
cli/src/: addon_cmd.rs  addon_loader.rs  addon_registry.rs  addons.rs  audio.rs  audit.rs  claude_commands.rs  cli.rs  compat.rs  compliance.rs  config.rs  container.rs  content_diff.rs  content_init.rs  content_install.rs  content_migration.rs  content_source.rs  context.rs  dirs.rs  doctor.rs  env.rs  generate.rs  harness_commands.rs  hook_registration.rs  integrity.rs  kit.rs  lock.rs  log.rs  main.rs  mcp_registration.rs  migration.rs  output.rs  preauth.rs  processkit_diff.rs  processkit_init.rs  processkit_source.rs  processkit_vocab.rs  reset.rs  runtime.rs  runtime_sync.rs  (+6 more)
cli/src/templates/: Dockerfile.j2  docker-compose.yml.j2
cli/tests/: integration.rs
cli/tests/e2e/: addon.rs  appearance.rs  config_coverage.rs  doctor.rs  lifecycle.rs  main.rs  migration.rs  mock_runtime.rs  no_container_harness.rs  preauth_merge.rs  preview.rs  reset.rs  runner.rs  smoke.rs  update.rs  version_upgrade.rs  visual.rs  visual_keybindings.rs
cli/tests/e2e/fixtures/: basic-debian.toml  sample.eps  v0.11-legacy.toml  with-python-addon.toml
cli/tests/e2e/infra/: mock-docker.sh  mock-podman.sh
context/: .processkit-provenance.toml  AIBOX.md  BACKLOG.md  DECISIONS.md
docs/: changelog.md  contributing.md  index.md  maintenance.md  roadmap.md  themes.md
docs-site/: docusaurus.config.js  sidebars.js
features/: index.html
player/: asciinema-init.js
screencasts/: theme-dracula.cast
scripts/: aibox-upgrade-test.sh  build-macos.sh  deploy-docs.sh  dev.sh  install.sh  maintain.sh  record-asciinema.sh  test-screencasts.sh
(+591 files in other folders)
