[package]
name = "dev-box"
version = "0.2.2"
edition = "2024"
description = "dev-box — manage AI-ready development container environments"
license = "MIT"
repository = "https://github.com/projectious-work/dev-box"
homepage = "https://github.com/projectious-work/dev-box"

[[bin]]
name = "dev-box"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = { version = "1", features = ["serde"] }
dirs = "6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
