[package]
name = "aibox"
version = "0.13.0"
edition = "2024"
description = "aibox — manage AI-ready development container environments"
license = "MIT"
repository = "https://github.com/projectious-work/aibox"
homepage = "https://github.com/projectious-work/aibox"

[[bin]]
name = "aibox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dialoguer = { version = "0.11", default-features = false }
minijinja = "2"
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = { version = "1", features = ["serde"] }
ureq = "3"
dirs = "6"
anyhow = "1"
chrono = "0.4"

[features]
default = []
e2e = []

[dev-dependencies]
tempfile = "3"
serial_test = "3"
ntest = "0.9"
